fixed message spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14473,7 +14473,11 @@ body {
 }
 
 .message-spacing {
-  padding-top: 3.5rem;
+  padding-top: 3.4rem;
+  top: 0;
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: 999;
 }
 
 .navbar-laravel {
