--- a/resources/sass/_blog.scss
+++ b/resources/sass/_blog.scss
@@ -60,7 +60,10 @@ body {
 }
 
 .message-spacing {
-    padding-top: 3.5rem;
+    padding-top: 3.4rem;
+    top: 0;
+    position: sticky;
+    z-index: 999;
  }
 
 
